# mindm-mcp

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  claude_desktop_config.json  llms.txt  make.bat  pyproject.toml  update_version.py
.github/: dependabot.yml
.github/workflows/: publish_pypi.yml  publish_testpypi.yml
assets/: claude_desktop_config.1.json  claude_desktop_config.2.json  claude_desktop_config.json  mcp-launcher.bat  mcp-launcher.sh  test.sh
assets/archive/: claude_desktop_config.test.json
examples/: client.py  test_server.py  usage_example.py
mindm_mcp/: __init__.py  claude_integration.py  client.py  combined.py  direct_integration.py  main.py  mcp_mindm.py  mcp_plugin.py  mindm_direct.py  server.py
mindm_mcp/examples/: basic_client_example.py  claude_mcp_example.py
tests/: test_client.py
