[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mindm_mcp"
version = "0.0.1.10"
authors = [
  { name="Robert Zaufall" },
]
description = "Model Context Protocol (MCP) server for the mindm library, enabling AI assistants like Claude to interact with MindManager."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
]

dependencies = [
  "mindm>=0.0.3.8",
  "fastapi>=0.95.1",
  "uvicorn>=0.22.0",
  "aiohttp>=3.8.4",
  "pydantic>=1.10.7",
  "websockets>=10.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.20.0",
  "black",
  "flake8",
]

[project.urls]
"Homepage" = "https://github.com/robertZaufall/mindm_mcp"
"Bug Tracker" = "https://github.com/robertZaufall/mindm_mcp/issues"

[project.scripts]
mindm-mcp-server = "mindm_mcp.main:start_server"
mindm-claude-integration = "mindm_mcp.claude_integration:run_integration"
mindm-mcp = "mindm_mcp.combined:start_services"
mindm-direct = "mindm_mcp.direct_integration:run_direct_integration"
mindm-simple = "mindm_mcp.mindm_direct:run_direct"

[tool.setuptools]
packages = ["mindm_mcp", "mindm_mcp.examples"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
